--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
+#H2
+#spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:Z:/App/InfiniteSpace/DDBBH2 
+# /data/labellaDDBBH2
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.hibernate.ddl-auto=update
 
+#Configure view resolver
+spring.mvc.view.prefix=/WEB-INF/pages
+spring.mvc.view.suffix=.html
