Creado Carga de peliculas

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+<!--		<start-class>es.thepuar.InfiniteSpace.InfiniteSpaceApplication</start-class>-->
+
 	</properties>
 
 	<dependencies>
