--- a/InifinitySpace-mvc/src/main/resources/application.properties
+++ b/InifinitySpace-mvc/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #H2
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.url=jdbc:h2:file:Z:/App/InfiniteSpace/DDBBH2 
+#jdbc:h2:file:H:/ArchivosLaBella/ProductMaker   Antigua bbdd
 # /data/labellaDDBBH2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -10,7 +11,11 @@ spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #Configure view resolver
 spring.mvc.view.prefix=/WEB-INF/pages
 spring.mvc.view.suffix=.html
+
+#logging.level.org.springframework.web=TRACE
