--- a/InfiniteSpace-common/pom.xml
+++ b/InfiniteSpace-common/pom.xml
@@ -11,5 +11,32 @@
 
     <artifactId>InfiniteSpace-common</artifactId>
 
+    <repositories>
+        <repository>
+            <id>dcm4che repository</id>
+            <url>http://www.dcm4che.org/maven2/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>xuggle</groupId>
+            <artifactId>xuggle-xuggler</artifactId>
+            <version>5.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
