--- a/InfiniteSpace-service-impl/pom.xml
+++ b/InfiniteSpace-service-impl/pom.xml
@@ -35,6 +35,18 @@
             <artifactId>InfiniteSpace-repository</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+
+
+        <!-- https://mvnrepository.com/artifact/xuggle/xuggle-xuggler -->
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
